--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BIN_ID=659c46a4266cfc3fde745432
-REACT_APP_SECRET_KEY=$2a$10$5zsgiZhbJemd7b7DTbnrmeWoUQ8o5xqPZT0zAgd3T4TIyYMKMyqI
+REACT_APP_BIN_ID=65a17308dc74654018914a1e
+REACT_APP_SECRET_KEY=$2a$10$5zsgiZhbJemd7b7DTbnrmeWoUQ8o5xqPZT0zAgd3T4TIyYMKMyqI.
