--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://thomaskitaba.github.lo/alx-practice",
-  "name": "portifolio-react",
+  "homepage": "https://thomaskitaba.github.io/thomas-portifolio",
+  "name": "thomas-portifolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +19,7 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.4",
     "react-on-screen": "^2.1.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,8 +48,9 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/nodemailer": "^6.4.14",
     "@types/react-mailchimp-subscribe": "^2.1.4",
-    "gh-pages": "^6.1.1",
-    "react-scripts": "^5.0.1"
+    "gh-pages": "^6.1.1"
   }
 }
