--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://thomaskitaba.github.io/thomas-portifolio",
-  "name": "thomas-portifolio",
+  "name": "yonas-kitaba-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
